Bug 163701 - show "delete" command from dolphin does not affect folder view menu
Summary: show "delete" command from dolphin does not affect folder view menu
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-10 14:20 UTC by Fabrizio Di Marco
Modified: 2008-08-08 15:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabrizio Di Marco 2008-06-10 14:20:18 UTC
Version:           KDE 4.0.81 >= 20080527 (using 4.00.81 (KDE 4.0.81 >= 20080527), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-18-generic

When i select the 'show "delete" command' in Dolphin, this options does not affect the context menu of the folder-view widget.
Comment 1 Leticia Hernández 2008-06-17 11:36:40 UTC
Yes, I was about to report this too. Using KDE 4.0.82.
Comment 2 Sel Goona 2008-07-30 15:33:36 UTC
Jup! A really annoying problem, especially if you dont use the trash in KDE4. Really uncomfortable, if you always have to open the Filemanager to delete a file in folderview.
Comment 3 Alex Merry 2008-08-06 22:21:13 UTC
SVN commit 843259 by alexmerry:

Honour Dolphin's "Show delete command" option in folderview.

BUG: 163701



 M  +9 -0      folderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=843259
Comment 4 Alex Merry 2008-08-08 15:28:04 UTC
SVN commit 844041 by alexmerry:

Backport fix: respect the ShowDeleteCommand option, as set in Dolphin/Konqueror.

CCBUG: 163701



 M  +6 -0      folderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=844041