Honour Dolphin's "Show delete command" option in folderview.

BUG: 163701


svn path=/trunk/KDE/kdebase/apps/; revision=843259