plasma/applets/folderview/folderview.cpp
@@ -1057,6 +1057,7 @@ void FolderView::createActions()
             SLOT(moveToTrash(Qt::MouseButtons, Qt::KeyboardModifiers)));
 
     KAction *del = new KAction(i18n("&Delete"), this);
+    del->setIcon(KIcon("edit-delete"));
     del->setShortcut(Qt::SHIFT + Qt::Key_Delete);
     connect(del, SIGNAL(triggered()), SLOT(deleteSelectedIcons()));
 
@@ -1279,9 +1280,17 @@ void FolderView::showContextMenu(QWidget *widget, const QPoint &pos, const QMode
 
     QList<QAction*> editActions;
     editActions.append(m_actionCollection.action("rename"));
+
+    KSharedConfig::Ptr dolphinConfig =
+        KSharedConfig::openConfig("dolphinrc", KConfig::IncludeGlobals);
+    const KConfigGroup dolphinKdeConfig(dolphinConfig, "KDE");
+    bool showDeleteCommand = dolphinKdeConfig.readEntry("ShowDeleteCommand", false);
     if (!hasRemoteFiles) {
         editActions.append(m_actionCollection.action("trash"));
     } else {
+        showDeleteCommand = true;
+    }
+    if (showDeleteCommand) {
         editActions.append(m_actionCollection.action("del"));
     }
 
